# serializer version: 1
# name: test_diagnostics
  dict({
    'entry_version': '1.1',
    'models': list([
      'grok-4.6',
    ]),
    'state': 'loaded',
    'subentries': list([
      dict({
        'data': dict({
          'code_interpreter': True,
          'model': 'grok-4.6',
          'web_search': True,
          'x_search': True,
        }),
        'llm_api_count': 1,
        'subentry_type': 'conversation',
      }),
    ]),
  })
# ---
# name: test_not_loaded_diagnostics
  dict({
    'entry_version': '1.1',
    'models': None,
    'state': 'not_loaded',
    'subentries': list([
      dict({
        'data': dict({
          'model': 'grok-4.6',
        }),
        'llm_api_count': 0,
        'subentry_type': 'conversation',
      }),
    ]),
  })
# ---
# name: test_speech_diagnostics
  dict({
    'entry_version': '1.1',
    'models': list([
      'grok-4.6',
    ]),
    'state': 'loaded',
    'subentries': list([
      dict({
        'data': dict({
          'model': 'grok-4.6',
        }),
        'llm_api_count': 0,
        'subentry_type': 'conversation',
      }),
      dict({
        'data': dict({
        }),
        'llm_api_count': 0,
        'subentry_type': 'stt',
      }),
      dict({
        'data': dict({
          'tts_speed': 1.1,
        }),
        'llm_api_count': 0,
        'subentry_type': 'tts',
      }),
    ]),
  })
# ---
